Fix File Integrity Verifier plug-in